# boss

./: .gitattributes  .gitignore  AGENTS.md  README.md  dockerfile  platform  requirements.txt
.github/instructions/: boss-app-controllers.instructions.md  copilot-tool-usage.instructions.md  godot.instructions.md  lean-app.instructions.md  python.instructions.md  swift.instructions.md
boss/: os.js  window.html
docs/: api.md  app-structure.md  application.yaml  boss-code.md  canakit  coding-style.md  debugging.md  development.md  docker  install-instructions.md  install.md  multipass  notifications-events.md  omarchy.md  pdf-ocr.md  project-structure.md  rust.md  server.md  spec.md  structure.md  ui-components.md
docs/prompt/: README.md  app-spec.md  boss-reference.md  code-generation-guidelines.md  ignore.md  js.md  process.md  python.md  shared.md  start.md  swift.md  tetsuo.md
docs/ssl/: cert.pem  key.pem
godot/: export_presets.cfg  main.gd  main.gd.uid  main.tscn  project.godot
private/: api.py  config  dev-config  dev-nginx.conf  nginx.conf  requirements.txt  restart  start  stop
private/app/io.bithead.wordsy/: README.md  __init__.py  db.py  dictionary.csv  pyproject.toml
private/lib/: __init__.py  model.py  server.py
private/tests/: test_capacity_planner.py  test_wordy.py
public/: index.html  manifest.json
public/boss/: application-manager.js  components.html  defaults.js  (+14 more)
scratch/: README.md  design.md  uislider.html  vsv.html
test/: requirements.txt  run_tests.sh
tests/: __init__.py
web/: api.py  requirements.txt  restart  start  stop
(+445 files in other folders)
